# YOLOX

./: README.md  pyproject.toml
src/yolox/: __init__.py
src/yolox/models/: __init__.py  yolo_head.py  yolox.py
src/yolox/utils/: __init__.py
