[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolox"
version = "0.3.0.dev0"
description = "YOLOX inference-only fork."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy",
    "torch>=1.7",
    "torchvision",
]

[tool.setuptools.packages.find]
where = ["src"]
